@@ -106,7 +106,8 @@ pkglib_MODULES = halt.mod \
 	suspend.mod \
         _multiboot.mod \
         multiboot.mod \
-	memdisk.mod
+	memdisk.mod \
+	lsmmap.mod
 
 # For _linux.mod.
 _linux_mod_SOURCES = loader/powerpc/ieee1275/linux.c
@@ -159,6 +160,11 @@ multiboot_mod_LDFLAGS = $(COMMON_LDFLAGS)
 memdisk_mod_SOURCES = disk/memdisk.c
 memdisk_mod_CFLAGS = $(COMMON_CFLAGS)
 memdisk_mod_LDFLAGS = $(COMMON_LDFLAGS)
+
+# For lsmmap.mod
+lsmmap_mod_SOURCES = commands/lsmmap.c
+lsmmap_mod_CFLAGS = $(COMMON_CFLAGS)
+lsmmap_mod_LDFLAGS = $(COMMON_LDFLAGS)
 
 include $(srcdir)/conf/common.mk
 
